force-app/main/default/objects/Offboarding__c/Offboarding__c.object-meta.xml
<CustomObject>
    <label>Offboarding</label>
    <nameField>
        <label>Offboarding ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>