force-app/main/default/objects/Offboarding__c/fields/Admin_TL_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_TL_Email__c</fullName>
    <formula>IF(
State__c = &apos;NSW&apos;,  $CustomMetadata.Admin_TL_Setting__mdt.NSW_Admin_TL.Email__c, 

IF(
State__c = &apos;QLD&apos;,  $CustomMetadata.Admin_TL_Setting__mdt.QLD_Admin_TL.Email__c, 

IF(
State__c = &apos;VIC&apos;,  $CustomMetadata.Admin_TL_Setting__mdt.VIC_Admin_TL.Email__c,

IF(
State__c = &apos;WA&apos;,  $CustomMetadata.Admin_TL_Setting__mdt.WA_Admin_TL.Email__c,

IF(
State__c = &apos;SA&apos;,  $CustomMetadata.Admin_TL_Setting__mdt.SA_Admin_TL.Email__c,

IF(
State__c = &apos;ACT&apos;,  $CustomMetadata.Admin_TL_Setting__mdt.ACT_Admin_TL.Email__c,

IF(
State__c = &apos;TAS&apos;,  $CustomMetadata.Admin_TL_Setting__mdt.TAS_Admin_TL.Email__c,

&quot;it@betterrehab.com.au&quot; )))))))</formula>
    <label>Admin TL Email</label>
    <type>Text</type>
</CustomField>