force-app/main/default/objects/Offboarding__c/fields/Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Direct Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offboardings</relationshipLabel>
    <relationshipName>Offboardings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>