force-app/main/default/objects/Offboarding__c/fields/Direct_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor_Email__c</fullName>
    <formula>Direct_Supervisor__r.Email</formula>
    <label>Direct Supervisor Email</label>
    <type>Text</type>
</CustomField>