force-app/main/default/objects/Offboarding__c/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <label>Exit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>