force-app/main/default/objects/Offboarding__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>Offboarding_Name__r.FirstName</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>