force-app/main/default/objects/Offboarding__c/fields/Hub_Office__c.field-meta.xml
<CustomField>
    <fullName>Hub_Office__c</fullName>
    <formula>IF(
State__c = &apos;NSW&apos;, $CustomMetadata.IT_Asset_Hub_Office__mdt.NSW_Hub_Office.Hub_Office__c,

IF(
State__c = &apos;QLD&apos;, $CustomMetadata.IT_Asset_Hub_Office__mdt.QLD_Hub_Office.Hub_Office__c,

IF(
State__c = &apos;VIC&apos;, $CustomMetadata.IT_Asset_Hub_Office__mdt.VIC_Hub_Office.Hub_Office__c,

IF(
State__c = &apos;WA&apos;, $CustomMetadata.IT_Asset_Hub_Office__mdt.WA_Hub_Office.Hub_Office__c,

IF(
State__c = &apos;SA&apos;, $CustomMetadata.IT_Asset_Hub_Office__mdt.SA_Hub_Office.Hub_Office__c,

IF(
State__c = &apos;ACT&apos;, $CustomMetadata.IT_Asset_Hub_Office__mdt.ACT_Hub_Office.Hub_Office__c,

IF(
State__c = &apos;TAS&apos;, $CustomMetadata.IT_Asset_Hub_Office__mdt.TAS_Hub_Office.Hub_Office__c,

&quot;Support Office&quot; )))))))</formula>
    <label>Hub Office</label>
    <type>Text</type>
</CustomField>