force-app/main/default/objects/Offboarding__c/fields/Internal_Banding__c.field-meta.xml
<CustomField>
    <fullName>Internal_Banding__c</fullName>
    <formula>TEXT(Offboarding_Name__r.Internal_Banding__c)</formula>
    <label>Internal Banding</label>
    <type>Text</type>
</CustomField>