force-app/main/default/objects/Offboarding__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Offboarding_Name__r.enrtcr__User__r.Title</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>