force-app/main/default/objects/Offboarding__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>Offboarding_Name__r.LastName</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>