force-app/main/default/objects/Offboarding__c/fields/Offboarding_Name__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Offboarding Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offboardings (Offboarding Name)</relationshipLabel>
    <relationshipName>Offboardings2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>