force-app/main/default/objects/Offboarding__c/fields/Offboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Type__c</fullName>
    <label>Offboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Involuntary</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>