force-app/main/default/objects/Offboarding__c/fields/Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Same_Day__c</fullName>
    <formula>Exit_Date__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Day</label>
    <type>Checkbox</type>
</CustomField>