force-app/main/default/objects/Offboarding__c/fields/State_Manager__c.field-meta.xml
<CustomField>
    <fullName>State_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>State Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offboardings (State Manager)</relationshipLabel>
    <relationshipName>Offboardings1</relationshipName>
    <type>Lookup</type>
</CustomField>