force-app/main/default/objects/Offboarding__c/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <formula>Offboarding_Name__r.Clinical_Supervisor__r.Email</formula>
    <label>Supervisor Email</label>
    <type>Text</type>
</CustomField>