force-app/main/default/objects/Offboarding__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <formula>Offboarding_Name__r.Email</formula>
    <label>User Email</label>
    <type>Text</type>
</CustomField>