force-app/main/default/objects/Offboarding__c/fields/User_Inactive_Run__c.field-meta.xml
<CustomField>
    <fullName>User_Inactive_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Inactive Run</label>
    <type>Checkbox</type>
</CustomField>