force-app/main/default/objects/Offboarding__c/listViews/All_Offboardings.listView-meta.xml
<ListView>
    <fullName>All_Offboardings</fullName>
    <columns>NAME</columns>
    <columns>Offboarding_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Exit_Date__c</columns>
    <columns>Offboarding_Type__c</columns>
    <columns>Direct_Supervisor__c</columns>
    <columns>State_Manager__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Offboardings</label>
</ListView>